--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: Using the text to speech extension
+title:  Speak out loud with the text to speech extension
 hero_image: images/banner.png
 description: Using the text to speech extension to make sprites speak out loud.
 version: 4
@@ -6,5 +6,5 @@ listed: false
 copyedit: false
 last_tested: "2021-03-10"
 steps:
-  - title: Using the text to speech extension
+  - title:  Speak out loud with the text to speech extension
   
