--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,10 +1,10 @@
-title:  Speak out loud with the Text to Speech extension
+title:  Make a sprite talk with the Text to Speech extension
 hero_image: images/banner.png
-description: Using the Text to Speech extension to make sprites speak out loud.
+description: Using the Text to Speech extension to make sprites speak out loud
 version: 4
 listed: false
 copyedit: false
 last_tested: "2021-03-10"
 steps:
-  - title:  Speak out loud with the Text to Speech extension
+  - title:  Make a sprite talk with the Text to Speech extension
   
