--- a/nl-NL/meta.yml
+++ b/nl-NL/meta.yml
@@ -1,7 +1,7 @@
 ---
 title: Spreek hardop met de tekst-naar-spraak-uitbreiding
 hero_image: images/banner.png
-description: Gebruik de tekst-naar-spraak-uitbreiding om sprites hardop te laten spreken.
+description: Gebruik de tekst-naar-spraak-uitbreiding om sprites hardop te laten spreken
 version: 4
 listed: false
 copyedit: false
