--- a/fr-FR/meta.yml
+++ b/fr-FR/meta.yml
@@ -1,7 +1,7 @@
 ---
 title: Parler à voix haute avec l'extension Synthèse vocale
 hero_image: images/banner.png
-description: Utiliser l'extension Synthèse vocale pour faire parler les sprites à voix haute.
+description: Utiliser l'extension Synthèse vocale pour faire parler les sprites à voix haute
 version: 4
 listed: false
 copyedit: false
